--- a/master_petugas/templates/master_petugas/index.html
+++ b/master_petugas/templates/master_petugas/index.html
@@ -114,7 +114,7 @@
                                 <div class="col-lg-6">
                                     <h5 class="mb-3">{{ form.nama_petugas.label }} & {{form.kode_petugas.label}}</h5>
                                     <div class="row">
-                                        <div class="col-md-6">
+                                        <div class="col-md-4">
                                             <div class="form-floating errors" id="form_{{form.kode_petugas.id_for_label}}">
                                                 {{form.kode_petugas}}
                                                 <label for="{{form.kode_petugas.id_for_label}}">{{ form.kode_petugas.label }}</label>
@@ -122,7 +122,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-8">
                                             <div class="form-floating errors" id="form_{{form.nama_petugas.id_for_label}}">
                                                 {{form.nama_petugas}}
                                                 <label for="{{form.nama_petugas.id_for_label}}">{{ form.nama_petugas.label }}</label>
@@ -177,8 +177,10 @@
                             
                                 <div class="col-lg-6">
                                     <h5 class="mb-3">{{ form.nik.label }} dan {{ form.npwp.label }}</h5>
+                                    
                                     <div class="row">
-                                        <div class="col-md-8">
+                                        
+                                        <div class="col-md-4">
                                             <div class="form-floating errors" id="form_{{form.nik.id_for_label}}">
                                                 {{form.nik}}
                                                 <label for="{{form.nik.id_for_label}}">{{ form.nik.label }}</label>
@@ -191,6 +193,14 @@
                                                 {{form.npwp}}
                                                 <label for="{{form.npwp.id_for_label}}">{{ form.npwp.label }}</label>
                                                 <div class="invalid-feedback" id="msg-{{form.npwp.id_for_label}}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-floating errors" id="form_{{form.jk.id_for_label}}">
+                                                {{form.jk}}
+                                                <label for="{{form.jk.id_for_label}}">{{ form.jk.label }}</label>
+                                                <div class="invalid-feedback" id="msg-{{form.jk.id_for_label}}">
                                                 </div>
                                             </div>
                                         </div>
@@ -425,7 +435,7 @@
             {"data" : 'status'},
             {"data" : 'aksi'},
         ],
-        lengthMenu: [5, 25, 50, 100,'All'],
+        lengthMenu: [10, 25, 50, 100],
         columnDefs: [ {
             'targets': [6], /* column index */
             'orderable': false, /* true or false */
@@ -452,7 +462,7 @@
                 if (i==1){
                     var throws = '<tr>'
                         
-                    for (var key of row.slice(0, 13)){
+                    for (var key of row.slice(0, 14)){
                         throws += '<th>' + key + '</th>'
                     }
 
@@ -463,14 +473,14 @@
                 if (i>1){
                     var tdrows = '<tr>'
                     var isnull = 0
-                    for (var key of row.slice(0, 13)){
+                    for (var key of row.slice(0, 14)){
                         if ( key == null ){
                             isnull += 1
                         }
                         tdrows += '<td>' + key + '</td>'
                     }
                     tdrows += '</tr>'
-                    if (isnull < 13) {
+                    if (isnull < 14) {
                         $('#'+table_id+' tbody').append(tdrows) 
                     }
                 }
