--- a/templates/base/detached-layout/datables.html
+++ b/templates/base/detached-layout/datables.html
@@ -36,7 +36,7 @@
     <!-- Datatable Init js -->
     {% comment %} <script src="{% static 'app-design/assets/js/pages/demo.datatable-init.js' %}"></script> {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="{% static 'app-design/assets/js/pages/demo.dashboard-analytics.js' %}"></script>
+    {% comment %} <script src="{% static 'app-design/assets/js/pages/demo.dashboard-analytics.js' %}"></script> {% endcomment %}
     {% block tables-script-extend %}
         {% comment %} Include your spesific style if youre need {% endcomment %}
     {% endblock tables-script-extend %}
