--- a/templates/base/detached-layout/base.html
+++ b/templates/base/detached-layout/base.html
@@ -305,9 +305,9 @@
         <script src="{% static 'app-design/assets/js/app.min.js' %}"></script>
 
         <!-- third party js -->
-        <script src="{% static 'app-design/assets/js/vendor/apexcharts.min.js' %}"></script>
-        <script src="{% static 'app-design/assets/js/vendor/jquery-jvectormap-1.2.2.min.js' %}"></script>
-        <script src="{% static 'app-design/assets/js/vendor/jquery-jvectormap-world-mill-en.js' %}"></script>
+        {% comment %} <script src="{% static 'app-design/assets/js/vendor/apexcharts.min.js' %}"></script> {% endcomment %}
+        {% comment %} <script src="{% static 'app-design/assets/js/vendor/jquery-jvectormap-1.2.2.min.js' %}"></script>
+        <script src="{% static 'app-design/assets/js/vendor/jquery-jvectormap-world-mill-en.js' %}"></script> {% endcomment %}
         <!-- third party js ends -->
 
         <!-- demo app -->
