--- a/templates/base/detached-layout/base.html
+++ b/templates/base/detached-layout/base.html
@@ -211,7 +211,7 @@
                         <li class="side-nav-item">
                             <a href="{% url 'master_penilaian:indikator-penilaian' %}" aria-expanded="false"  class="side-nav-link">
                                 <i class="mdi mdi-clipboard-edit"></i>
-                                <span> Indikator Penilaian </span>
+                                <span> Aspek Penilaian </span>
                             </a>
                         </li>
 
