--- a/master_petugas/templates/master_petugas/alokasi_peran.html
+++ b/master_petugas/templates/master_petugas/alokasi_peran.html
@@ -45,18 +45,22 @@
   
                 <ul class="nav nav-tabs nav-bordered mb-3">
                       <li class="nav-item">
-                          <a href="#alokasi-preview" data-bs-toggle="tab" aria-expanded="false" class="nav-link active">
+                          <a href="#alokasi-preview" data-bs-toggle="tab" class="nav-link active">
                               Preview
                           </a>
                       </li>
                       <li class="nav-item">
-                          <a href="#input-tab" data-bs-toggle="tab" aria-expanded="true" class="nav-link">
-                              Input
+                          <a href="#input-tab" data-bs-toggle="tab" class="nav-link" id="input-mitra" onclick="input_mitra_tab()">
+                              Alokasi Mitra
                           </a>
                       </li>
-
+                      <li class="nav-item">
+                        <a href="#input-organik-tab" data-bs-toggle="tab" class="nav-link" id="input-pegawai" onclick="input_pegawai_tab()">
+                            Alokasi Organik
+                        </a>
+                      </li>
                       <li class="nav-item d-none" id="nav-item-import">
-                        <a href="#import-tab" data-bs-toggle="tab" aria-expanded="true" class="nav-link">
+                        <a href="#import-tab" data-bs-toggle="tab" class="nav-link">
                             Import
                         </a>
                       </li>
@@ -80,10 +84,11 @@
                                 <table id="basic-datatable" class="table table-centered table-striped w-100 dt-responsive nowrap">
                                     <thead>
                                         <tr>
-                                            <th>Kode Mitra</th>
-                                            <th>Nama Mitra</th>
+                                            <th>Kode Petugas</th>
+                                            <th>Nama Petugas</th>
                                             <th>Kegiatan Survei</th>
                                             <th>Jabatan</th>
+                                            <th>Status</th>
                                             <th></th>
                                         </tr>
                                     </thead>
@@ -112,6 +117,17 @@
                                         </select>
                                         <label for="{{form.petugas.id_for_label}}">{{ form.petugas.label }}</label>
                                         <div class="invalid-feedback" id="msg-{{form.petugas.id_for_label}}">
+                                        </div>
+                                    </div>
+                                    <div class="form-floating errors d-none" id="form_{{form.pegawai.id_for_label}}">
+                                        <select name="pegawai" id="{{ form.pegawai.id_for_label }}" class="form-select">
+                                            <option value="">---------</option>
+                                            {% for dt in data_pegawai  %}
+                                            <option value="{{dt.id}}">[{{dt.nip_bps}}] {{dt.name}}</option>
+                                            {% endfor %}
+                                        </select>
+                                        <label for="{{form.pegawai.id_for_label}}">{{ form.pegawai.label }}</label>
+                                        <div class="invalid-feedback" id="msg-{{form.pegawai.id_for_label}}">
                                         </div>
                                     </div>
                                     
@@ -280,6 +296,18 @@
 
 <script>
 
+    let input_mitra_tab = () => {
+        $('#form_id_petugas_id').removeClass('d-none')
+        $('#form_id_pegawai_id').addClass('d-none')
+        $('#id_pegawai_id').val('')
+    }
+
+    let input_pegawai_tab = () => {
+        $('#form_id_petugas_id').addClass('d-none')
+        $('#id_petugas_id').val('')
+        $('#form_id_pegawai_id').removeClass('d-none')
+    }
+    
     var table = $("#basic-datatable").DataTable({
         processing: true,
         serverSide: true,
@@ -303,10 +331,11 @@
             {"data": 'petugas__nama_petugas'},
             {"data": 'survey__nama'},
             {"data" : 'role__jabatan'},
+            {"data" : 'pegawai'},
             {"data" : 'aksi'},
         ],
         columnDefs: [ {
-            'targets': [4], /* column index */
+            'targets': [5], /* column index */
             'orderable': false, /* true or false */
         }],
         keys: !0,
@@ -327,7 +356,7 @@
         buttonsStyling: true
     })
 
-    function editAlokPetugas(e){
+    function editAlokPetugas(id, state){
         $('#formAlokPetugas').attr('action', "{% url 'master_petugas:update-alokasi' %}")
         $('#submitformAlokPetugas').html('Update Data')
     
@@ -336,7 +365,7 @@
             type: "POST",
             dataType: "json",
             data : {
-                'id' : e
+                'id' : id
             },
             headers: {
                 "X-Requested-With": "XMLHttpRequest",
@@ -353,7 +382,12 @@
                 }else{
                     for (const [key, value] of Object.entries(data.instance)) {
                         $('#id_'+key).val(value)
-                        console.log(key)
+                    }
+
+                    if (state === 1){
+                        input_mitra_tab()
+                    }else{
+                        input_pegawai_tab()
                     }
                     $('.nav-tabs a[href="#input-tab"]').tab('show');
                     table.ajax.reload();
@@ -647,6 +681,7 @@
             }
         }) 
     })
+
 
 </script>
 
