--- a/master_penilaian/templates/master_penilaian/kegiatan_penilaian.html
+++ b/master_penilaian/templates/master_penilaian/kegiatan_penilaian.html
@@ -119,7 +119,7 @@
                                     </div>
                                 
                                     <h5 class="mt-3">{{ form.role_permitted.label }}</h5>
-                                    <p class="text-muted">Pilih role/jabatan mitra yang dapat mengakses kegiatan penilaian ini.</p>
+                                    <p class="text-muted">Pilih role/jabatan mitra yang akan dinilai.</p>
                                     <div class="form-floating errors" id="form_{{form.role_permitted.id_for_label}}">
                                         {{form.role_permitted}}
                                         <label for="{{form.role_permitted.id_for_label}}">{{ form.role_permitted.label }}</label>
@@ -132,7 +132,12 @@
                                 <div class="col-lg-6">
                                     <h5 class="mb-3">{{ form.survey.label }}</h5>
                                     <div class="form-floating errors" id="form_{{form.survey.id_for_label}}">
-                                        {{form.survey}}
+                                        <select name="survey" class="form-select" required id="id_survey_id">
+                                            <option value="" selected="">---------</option>
+                                            {% for dt in data_survei_finished %}
+                                                <option value="{{dt.id}}">{{dt.nama}} [{{dt.tgl_mulai|date:'d-M-Y'}} s.d. {{dt.tgl_selesai|date:'d-M-Y'}}]</option>
+                                            {% endfor %}
+                                          </select>
                                         <label for="{{form.survey.id_for_label}}">{{ form.survey.label }}</label>
                                         <div class="invalid-feedback" id="msg-{{form.survey.id_for_label}}">
                                         </div>
