--- a/master_petugas/templates/master_petugas/alokasi_peran.html
+++ b/master_petugas/templates/master_petugas/alokasi_peran.html
@@ -55,7 +55,7 @@
                           </a>
                       </li>
                       <li class="nav-item">
-                        <a href="#input-organik-tab" data-bs-toggle="tab" class="nav-link" id="input-pegawai" onclick="input_pegawai_tab()">
+                        <a href="#input-tab" data-bs-toggle="tab" class="nav-link" id="input-pegawai" onclick="input_pegawai_tab()">
                             Alokasi Organik
                         </a>
                       </li>
